@@ -1,11 +1,8 @@
 package com.example.cabinetmedical.application.controller;
 
-import com.example.cabinetmedical.application.DTO.DepenceDTO;
-import com.example.cabinetmedical.application.DTO.RendezVousDTO;
+import com.example.cabinetmedical.application.DTO.*;
 import com.example.cabinetmedical.application.DTO.Stats.StatsDTO;
 import com.example.cabinetmedical.application.ResponseApi.ApiResponse;
-import com.example.cabinetmedical.application.DTO.SecretaireDTO;
-import com.example.cabinetmedical.application.DTO.UserDTO;
 import com.example.cabinetmedical.application.service.AuthService;
 import com.example.cabinetmedical.application.service.CabinetAppService;
 import com.example.cabinetmedical.application.service.MedecinAppService;
@@ -14,7 +11,9 @@ import com.example.cabinetmedical.domain.model.Depence.Depence;
 import com.example.cabinetmedical.domain.utils.PermissionKey;
 
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
@@ -27,35 +26,58 @@ public class MedecinController {
 
     private MedecinAppService medecinAppService;
     private  AuthService authService ; 
-    private  CabinetAppService cabinetAppService ; 
+    private  CabinetAppService cabinetAppService ;
+    PasswordEncoder passwordEncoder;
 
     public MedecinController(MedecinAppService medecinAppService 
         ,AuthService authService , 
-        CabinetAppService cabinetAppService
+        CabinetAppService cabinetAppService,
+                             PasswordEncoder passwordEncoder
       ) {
         this.medecinAppService = medecinAppService;
         this.authService = authService  ;
         this.cabinetAppService  =cabinetAppService ;
+        this.passwordEncoder = passwordEncoder;
     }
 
     @PostMapping("/addSecretary")
-    public ApiResponse<SecretaireDTO> addSecretary(@RequestBody SecretaireDTO secretaireDTO) {
-        Object result = medecinAppService.addSecretary(secretaireDTO);
+    public ResponseEntity<ApiResponse<SecretaireDTO>> addSecretary(Authentication aut,@RequestBody CreateSecretaireDTO DTO) {
+
+        System.out.println("RECEVIED SECRETAIRE: "+DTO );
+
+        UserDTO user = authService.getUserDto(aut);
+
+        DTO.setPassword(passwordEncoder.encode(DTO.getPassword()));
+
+        Object result = medecinAppService.addSecretary(DTO, user);
 
         //* Valider le preseence du id  */
-        Cabinet cabinet = cabinetAppService.getCabinetFromUser(secretaireDTO) ;
+        Cabinet cabinet = cabinetAppService.getCabinetByEmail(user) ;
         int idCabinet =  cabinet.getIdCabinet() ;
         if (result instanceof SecretaireDTO secretaire) {
-            String message = "Secretary: " + secretaire.getIdSecretaire() + " added for: " + idCabinet;
-            return new ApiResponse<>(HttpStatus.OK.value(), message, secretaire);
-        } else if (result instanceof String msg) {
-            return new ApiResponse<>(HttpStatus.BAD_REQUEST.value(), msg, null);
-        } else {
-            return new ApiResponse<>(HttpStatus.INTERNAL_SERVER_ERROR.value(), "Unknown error", null);
+            return ResponseEntity.ok(
+                    new ApiResponse<>(HttpStatus.OK.value(),
+                            "Secretary updated",
+                            secretaire)
+            );
+        }
+        else if (result instanceof String msg) {
+            return ResponseEntity
+                    .status(HttpStatus.BAD_REQUEST)
+                    .body(new ApiResponse<>(HttpStatus.BAD_REQUEST.value(),
+                            msg,
+                            null));
+        }
+        else {
+            return ResponseEntity
+                    .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new ApiResponse<>(500, "Unknown error", null));
         }
     }
-    @GetMapping("/secretaires/{idCabinet}")
-    public ApiResponse<List<SecretaireDTO>> getAllSecretaries(@PathVariable int idCabinet) {
+    @GetMapping("/secretaires")
+    public ApiResponse<List<SecretaireDTO>> getAllSecretaries(Authentication aut) {
+        UserDTO user = authService.getUserDto(aut);
+        int idCabinet = cabinetAppService.getCabinetByEmail(user).getIdCabinet() ;
 
         
         List<SecretaireDTO> secretaires = medecinAppService.getAllSecretaries(idCabinet);
@@ -65,63 +87,97 @@ public class MedecinController {
         return new ApiResponse<>(status,message,secretaires);
     }
 
-    @GetMapping("/secretaires/{idCabinet}/permissions")
-    public List<String> getAllPermissions() {
-        return Arrays.stream(PermissionKey.values())
-                .map(PermissionKey::name)
-                .collect(Collectors.toList());
+    @GetMapping("/secretaires/permissions")
+    public ApiResponse<List<String>> getAllPermissions(Authentication aut) {
+
+        UserDTO user = authService.getUserDto(aut);
+        Cabinet cabinet = cabinetAppService.getCabinetByEmail(user);
+
+        List<PermissionKey> permissions =
+                medecinAppService.getPermissions(cabinet);
+
+        List<String> permissionNames = permissions.stream()
+                .map(Enum::name)
+                .toList();
+
+        return new ApiResponse(HttpStatus.OK.value(), "retrieved Permisions", permissionNames);
     }
+
 
     @PutMapping("/editSecretary")
-    public ApiResponse<SecretaireDTO> updateSecretaire(@RequestBody SecretaireDTO secretaireDTO) {
-        System.out.println("received dto" + secretaireDTO);
+    public ResponseEntity<ApiResponse<SecretaireDTO>> updateSecretaire(@RequestBody EditSecretaireDTO DTO, Authentication aut) {
+
+        System.out.println("received dto" + DTO);
+        UserDTO user = authService.getUserDto(aut);
 
         //* Valider le preseence du id  */
-        Cabinet cabinet = cabinetAppService.getCabinetFromUser(secretaireDTO) ;
+        Cabinet cabinet = cabinetAppService.getCabinetByEmail(user) ;
         int idCabinet =  cabinet.getIdCabinet() ;
 
-        SecretaireDTO secretaire = medecinAppService.updateSecretaire(secretaireDTO);
-        String message = "Secretary: " + secretaire.getIdSecretaire() + "updated for : " + idCabinet;
-        int status = HttpStatus.OK.value();
+        Object result = medecinAppService.updateSecretaire(DTO, user);
+        if (result instanceof SecretaireDTO secretaire) {
+            return ResponseEntity.ok(
+                    new ApiResponse<>(HttpStatus.OK.value(),
+                            "Secretary updated",
+                            secretaire)
+            );
+        }
+        else if (result instanceof String msg) {
+            return ResponseEntity
+                    .status(HttpStatus.BAD_REQUEST)
+                    .body(new ApiResponse<>(HttpStatus.BAD_REQUEST.value(),
+                            msg,
+                            null));
+        }
+        else {
+            return ResponseEntity
+                    .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new ApiResponse<>(500, "Unknown error", null));
+        }
 
-        return new ApiResponse<>(status, message, secretaire);
     }
     @DeleteMapping("/deleteSecretary/{idsecretaire}")
-    public ApiResponse<SecretaireDTO> deleteSecretaire(@PathVariable int idsecretaire) {
+    public ApiResponse<SecretaireDTO> deleteSecretaire(@PathVariable int idsecretaire, Authentication aut) {
+        UserDTO user = authService.getUserDto(aut);
         System.out.println("received id:  " + idsecretaire);
-        medecinAppService.deleteSecretaire(idsecretaire);
+        medecinAppService.deleteSecretaire(idsecretaire, user);
         String message = "deleted secretary: " + idsecretaire;
         int status = HttpStatus.OK.value();
 
         return new ApiResponse<>(status, message, null);
     }
 
-    @GetMapping("/rendezvous/{idCabinet}")
-    public ApiResponse<List<RendezVousDTO>> getAllRendezVous(@PathVariable int idCabinet) {
-        List<RendezVousDTO> data = medecinAppService.getAllRendezVous(idCabinet);
+    @GetMapping("/rendezvous")
+    public ApiResponse<List<RendezVousDTO>> getAllRendezVous(Authentication aut) {
+        UserDTO user = authService.getUserDto(aut);
+        Cabinet cabinet = cabinetAppService.getCabinetByEmail(user) ;
+        int idCabinet = cabinet.getIdCabinet() ;
+        List<RendezVousDTO> data = medecinAppService.getAllRendezVous(user);
         String message = "Appointments retrieved by" + idCabinet;
         int status = HttpStatus.OK.value();
         return new ApiResponse<>(status, message, data);
     }
 
     @PutMapping("/editRendezVous")
-    public ApiResponse<RendezVousDTO> updateRendezVous(@RequestBody RendezVousDTO rendezVousDTO) {
-
-        RendezVousDTO rv = medecinAppService.editRendezVous(rendezVousDTO);
-        String message = "Appointment: "+ rendezVousDTO.getIdRendezVous() + " updated for: " + rendezVousDTO.getIdCabinet();
+    public ApiResponse<RendezVousDTO> updateRendezVous(@RequestBody RendezVousDTO rendezVousDTO, Authentication aut) {
+        System.out.println("RECEIVED DTO: "+ rendezVousDTO);
+        UserDTO user = authService.getUserDto(aut);
+        int idCabinet = cabinetAppService.getCabinetByEmail(user).getIdCabinet() ;
+        RendezVousDTO rv = medecinAppService.editRendezVous(rendezVousDTO, user);
+        String message = "Appointment: "+ rendezVousDTO.getIdRendezVous() + " Has been updated";
         int status = HttpStatus.OK.value();
 
         return new ApiResponse<>(status, message, rv);
     }
 
-    @GetMapping("/getStats/{idCabinet}")
+    @GetMapping("/getStats")
     public ApiResponse<StatsDTO>  getStats(
-        @PathVariable int idCabinet ,
         Authentication aut 
     ) {
 
         UserDTO user  = authService.getUserDto(aut) ;
         StatsDTO stats = medecinAppService.getStats(user);
+        int idCabinet = cabinetAppService.getCabinetByEmail(user).getIdCabinet();
         String message = "Stats retrieved by" + idCabinet;
         int status = HttpStatus.OK.value();
 
@@ -129,35 +185,47 @@ public class MedecinController {
 
     }
     @PostMapping("/addDepence")
-    public ApiResponse<DepenceDTO> addDepence(@RequestBody DepenceDTO dto) {
+    public ApiResponse<DepenceDTO> addDepence(@RequestBody DepenceDTO dto, Authentication aut) {
 
         System.out.println("received dto" + dto);
+        UserDTO user = authService.getUserDto(aut);
+        int idCabinet = cabinetAppService.getCabinetByEmail(user).getIdCabinet();
+        dto.setIdCabinet(idCabinet);
 
-        DepenceDTO depence = medecinAppService.addDepence(dto);
-        String message = "Depence added for" + dto.getIdCabinet();
+        DepenceDTO depence = medecinAppService.addDepence(dto, user);
+        String message = "Depence added for" + idCabinet;
         int status = HttpStatus.OK.value();
 
         return new ApiResponse<>(status, message, depence);
 
     }
     @DeleteMapping("/deleteDepence")
-    public ApiResponse<DepenceDTO> deleteDepence(@RequestBody DepenceDTO dto) {
+    public ApiResponse<DepenceDTO> deleteDepence(@RequestBody DepenceDTO dto, Authentication aut) {
         System.out.println("received dto" + dto);
 
-        medecinAppService.deleteDepence(dto);
-        String message = "Depence deleted for" + dto.getIdCabinet();
+        UserDTO user = authService.getUserDto(aut);
+        Cabinet cabinet = cabinetAppService.getCabinetByEmail(user) ;
+        int idCabinet = cabinet.getIdCabinet() ;
+        dto.setIdCabinet(idCabinet);
+
+        medecinAppService.deleteDepence(dto, user);
+        String message = "Depence deleted for" + idCabinet;
         int status = HttpStatus.OK.value();
 
         return new ApiResponse<>(status, message, null);
 
     }
     @PutMapping("/editDepence")
-    public ApiResponse<DepenceDTO> editDepence(@RequestBody DepenceDTO dto) {
+    public ApiResponse<DepenceDTO> editDepence(@RequestBody DepenceDTO dto, Authentication aut) {
 
+        UserDTO user = authService.getUserDto(aut);
+        Cabinet cabinet = cabinetAppService.getCabinetByEmail(user) ;
+        int idCabinet = cabinet.getIdCabinet() ;
+        dto.setIdCabinet(idCabinet);
         System.out.println("Received Depence" + dto);
 
-        DepenceDTO depence = medecinAppService.updateDepence(dto);
-        String message = "Depence updated for" + dto.getIdCabinet();
+        DepenceDTO depence = medecinAppService.updateDepence(dto, user);
+        String message = "Depence updated for" + idCabinet;
         int status = HttpStatus.OK.value();
 
         return new ApiResponse<>(status, message, depence);
